[Blacklist] Fix blacklisted thumbnails on mobile in pool index (#1192)

--- a/app/javascript/src/styles/common/blacklists.scss
+++ b/app/javascript/src/styles/common/blacklists.scss
@@ -232,5 +232,5 @@ article.thumbnail.blacklisted {
     background-position: center;
     background-color: unset !important; // Prevent custom color from showing through
   }
-  img { display: none; }
+  img { visibility: hidden; }
 }
